- pulled some changes from repetier which targeted better inserted moves / synced prepareQueueMoves
- tuned inline to INLINE -> __attribute__((always_inline)) like repetier did for more computation speed
- quite a lot of little updates to reach more of repetier devs code and code style
- lot of comments added around jerk code and path planning

V RF.01.37u4.Mod (2017-09-20)
- Possibly removed shift-bug by removing Feature HalfStepping as repetier did 27 Apr 2015 @ https://github.com/repetier/Repetier-Firmware/commit/50af89fef714bc271ac98bba3153210a8a61b275
- Getting move function closer to repetier development
- moving Printer::stepNumber+=max_loops into "if acceleration block". It was not there until now! possible bugfix for anything?
- pulling repetiers changes on spiInit and SDCard::initsd() to this mod (no negative impact seen so far)
- removed some garbage like rest of babystepping which is something like directSteps or Z-Compensation for driving Z aside from queue.
- PWM initialisation is now the first we do at Printer::setup() while booting. This as well is some pull from repetiers changes. (no negative impact seen so far)

V RF.01.37u3.Mod (2017-09-19)
- remove bug with sending rom data over serial before starting/booting up (since ~RF.01.37t6.Mod).
- implemented FEATURE_USER_INT3 as a dummy feature to easily implement some users interrupt function to pin PD3 @RF1000 or RF2000
- implemented FEATURE_READ_CALLIPER to get the possibility to plug an digital calliper to reserve pins at RF2000 (or RF1000 with pinchanges)

V RF.01.37u2.Mod (2017-09-10)
- Milling: finally tested PAUSE with MOVE while Milling and it did not work as expected. Small bug which is now patched.
- Milling: moved "Set XY Origin" to Menu "Position->" for manual positioning.
- Milling: fix possible homing one axis allowes "set xy origin" which needs at least 2 or 3 axes.
- Milling: fix "Find Z origin" automatic driveback 15mm https://github.com/RF1000community/Repetier-Firmware/issues/81